[package]

name = "space"
version = "0.0.0"
authors = ["Jorge Aparicio <japaricious@gmail.com>"]

[dependencies.cast]
git = "https://github.com/japaric/cast.rs"

[dev-dependencies.quickcheck]
branch = "rustup"
git = "https://github.com/japaric/quickcheck"

[dev-dependencies.quickcheck_macros]
branch = "rustup"
git = "https://github.com/japaric/quickcheck"
