[package]

name = "space"
version = "0.0.0"
authors = ["Jorge Aparicio <japaricious@gmail.com>"]

[dependencies.cast]
git = "https://github.com/japaric/cast.rs"

[dev-dependencies.quickcheck]
git = "https://github.com/burntsushi/quickcheck"

[dev-dependencies.quickcheck_macros]
git = "https://github.com/burntsushi/quickcheck"

[profile.test]
debug = false
